--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ version: '3'
 services:
   squid:
     build: ./
-    ports:
-      - "3128:3128"
-    restart: on-failure
+#    ports:
+#      - "3128:3128"
+    restart: unless-stopped
+
+networks:
+  default:
+    external:
+      name: ${NETWORK:-sshd}
